# cordic

./: CMakeLists.txt  Doxyfile  README.md  meson.build  mkdocs.yml  pyproject.toml
cordic/: __init__.py  _cordic.pyf  _cordic_helpers.c  meson.build
docs/: api.md  index.md  installation.md  quickstart.md  references.md  theory.md
src/: cordic.c  cordic.h  meson.build
tests/: meson.build  test_cordic.c  test_cordic.py
